# msal-login-forwarder

./: README.md
.github/workflows/: rust.yaml
go/: Makefile  go.mod
go/cmd/client/: main.go
go/cmd/server/: main.go
python/: edge.py
rust/: Cargo.toml  Makefile
rust/src/client/: main.rs
rust/src/server/: main.rs
