[package]
name = "msal-login-forwarder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
webbrowser = "0.8.0"
futures = "0.3.25"
buffered-reader = "1.1.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.3.1"
config = "0.13.2"
dirs = "4.0.0"
